--- a/src/App.css
+++ b/src/App.css
@@ -3,17 +3,20 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
   background-color: #C0DEE2;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-header {
-  background-color: #FF7360;
-  font-size: 2em;
-  padding: 0.5em;
-  font-weight: 500;
+#root {
+  width: 100%;
+  height: 100%;
+}
+
+#root > div {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 #container {
